# wlcam

./: .gitmodules  meson.build  meson_options.txt  submodules.txt
scripts/: wlcam-companion.py
src/: .gitmodules  args-parser.hpp  args.cpp  args.hpp  assert.hpp  camera.cpp  camera.hpp  context.hpp  encoder  fd.hpp  file.cpp  file.hpp  gawl  graphics-wrapper.cpp  graphics-wrapper.hpp  ioctl-debug.hpp  ioutil.hpp  jpeg.cpp  jpeg.hpp  media-device.cpp  media-device.hpp  pixel-format.hpp  pulse  record-context.cpp  record-context.hpp  remote-server.cpp  remote-server.hpp  timer.hpp  udev.cpp  udev.hpp  ui-v4l2.cpp  ui-v4l2.hpp  ui.hpp  v4l2-wlctrl  v4l2.cpp  v4l2.hpp  vcw  video-encoder-example.cpp  window.cpp  window.hpp  (+2 more)
src/camss/: args.cpp  args.hpp  camera.cpp  camera.hpp  enumerator.cpp  main.cpp  meson.build  notes.txt  ui.cpp
src/graphics/: bayer.cpp  bayer.hpp  multitex.cpp  multitex.hpp  nv12.cpp  nv12.hpp  planar.cpp  planar.hpp  yuv-planar-graphic-base.hpp  yuv420sp.cpp  yuv420sp.hpp  yuv422i.cpp  yuv422i.hpp  yuy2i.cpp  yuy2i.hpp  yuy2p.cpp  yuy2p.hpp  yuyv-interleaved-graphic.cpp  yuyv-interleaved-graphic.hpp  yuyv-planar-graphic.cpp  yuyv-planar-graphic.hpp
src/ipu3/: algorithm.cpp  algorithm.hpp  args.cpp  args.hpp  cio2.cpp  cio2.hpp  devinfo.cpp  enumerator.cpp  imgu.cpp  imgu.hpp  main.cpp  meson.build  params.cpp  params.hpp  pipeline.cpp  uapi.cpp  uapi.hpp
src/pulse-recorder/: meson.build  pulse.cpp  pulse.hpp
src/simple/: args.cpp  args.hpp  camera.cpp  camera.hpp  main.cpp  meson.build
src/uvc/: args.cpp  args.hpp  camera.cpp  camera.hpp  main.cpp  meson.build
src/v4l2-encoder/: encoder.cpp  encoder.hpp  frag.glsl  meson.build  vert.glsl
src/video-encoder/: common.hpp  converter.cpp  encoder.cpp  encoder.hpp  meson.build
submodules/encoder/: meson.build
submodules/encoder/src/: encoder  example.cpp  macros  pulse  util
submodules/encoder/submodules/pulse-recorder/src/: macros  meson.build  pulse.cpp  pulse.hpp  util
submodules/encoder/submodules/video-encoder/src/: converter.cpp  converter.hpp  encoder.cpp  encoder.hpp  meson.build
